--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,82 @@
-.mb-row{
+body{
+   font-family: "Roboto", sans-serif;
+}
+
+/* COMMONS */
+
+._cap{
+   text-transform: capitalize;
+}
+
+
+
+/* HEADER */
+
+.htcontainer{
+   width: 100%;
+   height:80px;
+  
+}
+
+.htrow{
+   height: 80px;
+   background-color: gold;
+   margin: 0 auto;
+}
+
+
+._floating > h3{
+   float: left;
+   padding-right: 10px;
+}
+
+.dologo{
+   transform: scale(0.5 , 0.5);
+   
+}
+
+._fontsize >h3{
+   font-size: 15px;
+}
+
+
+.signup{
+   border: 1px solid blue;
+   color: blue;
+   background-color: transparent;
+   vertical-align: middle;
+   
+}
+
+
+.mb_container{
+   width: 100%;
+   height: 600px;
+   background-image: url(../img/bg-banner-home.jpg);
+   background;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .mb-row{
    background-color: cadetblue;
    width: 100%;
    height: 80px;
@@ -41,4 +119,4 @@
    width:60%;
    margin: 0 auto;
 
-}
+} */
